# ai-automation-lab

./: .gitignore  README.md  pyproject.toml
docs/: week-01.md
notes/: git-cheatsheet.md
src/ai_automation_lab/: __init__.py  main.py
tests/: test_main.py
